# StoreIT

./: .dockerignore  .env.docker  .env.example  .gitignore  CHANGES.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh
.githooks/: pre-commit
.sqlx/: query-0c172c011ceb0771021d63d16f86a89bc13fbbe0c5854ac6124b7a488644b049.json  query-0ef3ca59849897b07576d630f39746224f700e7a1581a02e9d10434ff6bdd79a.json  query-15fac8e60f3765d04ca1361d332ff1894d2f2998c88d434a55a39bc884a5858b.json  query-1bf2df96fa64b995c613833ae45879f8065f76d69267b57a06b17725dd6ae792.json  query-24f8a9aad3148089f0a203e9bf331e60bf9bd88a2911fe4186df336a30b4cc98.json  query-2904d7973007f5f8217965b83de966ae64566683a0d952f8ac08e21cfc7b3a46.json  query-2953bee02667bacfdd9ed4b3688f667c4e88d82a80a1a8a0d30f69c1c27bddc7.json  query-29c44c2b0ffbc673b67b2eef975396bd81d675aea2f1f072fdf2bba54045f689.json  query-2cebfe3d32d1a29e5f9436602cac4898b653c432526885d33d92957aa9446304.json  query-390f5208b5f37db5dc9a18bd2392c178c2439f6e1db7b1b828af7286bd81a603.json  query-41f3c55d793cd4f08351414dc148de4fbc057457649a361937f9d482c438c58c.json  query-42a25240af8a68c0507fa028bca66c1b7fe12efcb1b87fbc2f5bd83ce02de997.json  query-432d3eb4bac1e1c547cd8c300c21785feaf2f590ee3708902397a6a0e4cccceb.json  query-4a62a01494787855a4f8f8e5368ed575d3c561ba872c35abdecd7feb960505b3.json  query-4fc02c093f339438f52442c50b91f0bf8a24589b93972f09691e930a95313e4c.json  query-52acb5a587dd15b4700c1a7f448775e55a1aecf7cc6d54b21f93ddfa1f82c892.json  query-5ec95dd44d1aa9354e3f59878fe64b0b50940bfd6517000a66f54df7dd2a8d2a.json  query-64533f2a64c5314ea2fd3584b5075e225f9a1afb9ae877a2bd970a81e823abc5.json  query-65687ec22b34fc68a285664cf8ee5ed15a3052db99c0b7c2621c269daeb751d0.json  query-7144d7c131481e2f7c74184a44f34b869ffd9a2a87eb370a1339ec2fd23971d2.json  query-7bf7f8ae437e79f9800aa1316e7b621ec630d57751685e5cde84d5e24e47235d.json  query-7e4e232298fb44e2bfb13e0b4ecbf530105ced0c1de53028a0692abaaf1679d6.json  query-7f2bec8dda5b28dc79d28c355be872007457942789902e054888da88a833ca10.json  query-81b02bbbdaf1ff426aabb260845c0dfb5138c5bebb2f4f98d315dfb682725ca5.json  query-82cc7943ee858213857557857eb029d54a726359165f73acdfe01dda737203ca.json  query-863912f00e5b3b83310465286b313d29f1e21004c4cdb09a759fec188a8e57a9.json  query-867c36b48f2a127b1af5f3d7abe5be372ba8965fe59ac431bc7dc5370e2095f3.json  query-87d494dd7959c5543e394ff7334d72a367364ac2db8582e02fd8111b223afa7c.json  query-8e6ab771d329ad9bff9bca2b205dc9d5c6701aa30cad13c84ec88fec4e05b2a0.json  query-8ecdda45d3dda58c4ce81df7b85d8814b4de172e7d78058e47c8c61a594651aa.json  query-925a67b0404d31a38f3ab566b3975352958de17f4bd2c43c910559ff8e3bc8de.json  query-9ea8f5e126112b6551de474ac5d14e05164304d32465de5794e9d3f587e60c95.json  query-a3aab4bcb3d42ab3c8ad835b0f64e9e49ae1d0b5fd973efff04201f01545dd69.json  query-a7d791e999d2524fcb9a639b24707a8c4724071a8ee4471d65c21a2c1c61ea0b.json  query-acea0e4c8d68b55e30aa92697f29cc436d0a97c24b9c7baf74eb5ad2876bf06c.json  query-b035f3b8259b337b74a2eb887515a0d528e09311398beb45eec6e44027ef33b0.json  query-b1c2d597ecc65b2fe43563d67519d295989b905d1121aafcca3448734e137d6f.json  (+9 more)
crates/storeit-ai/: Cargo.toml
crates/storeit-ai/src/: anthropic.rs  claude_code.rs  lib.rs  mock.rs  parse.rs  prompt.rs
crates/storeit-auth/: Cargo.toml
crates/storeit-auth/src/: error.rs  lib.rs  mock.rs  mode.rs  oidc.rs  password.rs  provider.rs  types.rs
crates/storeit-db-sqlite/: Cargo.toml
crates/storeit-db-sqlite/migrations/: 20260228000001_initial_schema.sql  20260228000002_fts5_search.sql  20260228000003_auth.sql  20260304000001_local_auth.sql  20260304000002_location_coordinates.sql  20260305000002_photo_storage_key_index.sql  20260316000001_photo_rotation.sql  20260317000001_meta_table.sql  20260318000001_photo_size_keys.sql
crates/storeit-db-sqlite/src/: container_repo.rs  group_repo.rs  item_repo.rs  lib.rs  location_repo.rs  nfc_tag_repo.rs  photo_repo.rs  search_repo.rs  session_repo.rs  settings_repo.rs  user_group_repo.rs  user_repo.rs
crates/storeit-db-sqlite/tests/: repos.rs
crates/storeit-domain/: Cargo.toml
crates/storeit-domain/src/: entities.rs  errors.rs  lib.rs  repositories.rs  services.rs  storage.rs
crates/storeit-server/: Cargo.toml
crates/storeit-server/src/: app_state.rs  cli.rs  config.rs  dto.rs  error.rs  extractors.rs  interchange.rs  lib.rs  main.rs  router.rs  static_files.rs
crates/storeit-server/src/handlers/: admin.rs  auth.rs  containers.rs  identify.rs  items.rs  local_auth.rs  locations.rs  mod.rs  nfc.rs  photos.rs  search.rs
crates/storeit-server/tests/api/: admin_backup_test.rs  admin_groups_test.rs  admin_restore_test.rs  admin_settings_test.rs  admin_users_test.rs  auth_test.rs  containers_test.rs  identify_test.rs  items_test.rs  local_auth_test.rs  locations_test.rs  mod.rs  nfc_test.rs  openapi_test.rs  photos_test.rs  search_test.rs
crates/storeit-server/tests/common/: mod.rs
crates/storeit-storage-fs/: Cargo.toml
crates/storeit-storage-fs/src/: lib.rs
e2e/: .gitignore  package-lock.json  package.json  tsconfig.json  (+1 more)
(+164 files in other folders)
