[package]
name = "storeit-ai"
version.workspace = true
edition.workspace = true

[features]
test-support = []

[dependencies]
storeit-domain = { path = "../storeit-domain" }
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
base64 = "0.22"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
